# biomero-schema

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
src/biomero_schema/: __init__.py  cli.py  models.py  schema.json
src/biomero_schema.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/schema_validator/: __init__.py  cli.py
src/schema_validator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: example_workflow.json  test_computed_fields.py
