[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biomero-schema"
version = "0.1.0"
description = "CLI tool to validate and parse JSON files against a schema"
authors = [{name = "Schema Validator", email = "validator@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "jsonschema>=4.0.0",
    "rich>=13.0.0"
]

[project.scripts]
biomero-schema = "biomero_schema.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-64"]

[tool.pixi.pypi-dependencies]
biomero-schema = { path = ".", editable = true }

[tool.pixi.tasks]
test-parse = "biomero-schema parse tests/example_workflow.json"
test-pparse = "biomero-schema parse tests/example_workflow.json --pretty"
test-jparse = "biomero-schema parse tests/example_workflow.json --json"
